--- a/Nsiclass.Client/Areas/Admin/Views/Version/VersionDetails.cshtml
+++ b/Nsiclass.Client/Areas/Admin/Views/Version/VersionDetails.cshtml
@@ -405,6 +405,9 @@
                 <div class="modal-body">
                     <h4>Въведете уникален код за новата версия, копие на <span style="font-weight:700">@Model.Version</span></h4>
                     <input type="text" name="newVersion" />
+                    <input style="margin-left:20px;" type="checkbox" name="copyRelations" value="check" />
+                    <label>Копиране на релациите</label>
+
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Отказ</button>
