--- a/Nsiclass.Client/Views/Shared/_Layout.cshtml
+++ b/Nsiclass.Client/Views/Shared/_Layout.cshtml
@@ -24,6 +24,33 @@
 
     <script src="~/js/notify.js"></script>
 
+    @*cookieconsent*@
+    <link rel="stylesheet" type="text/css" href="~/build/cookieconsent.min.css" />
+    <script src="~/build/cookieconsent.min.js"></script>
+    <script>
+        window.addEventListener("load", function () {
+            window.cookieconsent.initialise({
+                "palette": {
+                    "popup": {
+                        "background": "#1d8a8a"
+                    },
+                    "button": {
+                        "background": "#62ffaa"
+                    }
+                },
+                "theme": "classic",
+                "position": "top",
+                "static": true,
+                "content": {
+                    "message": "Този сайт използва бисквитки, за да ви предостави най-добрата услуга.",
+                    "dismiss": "Приемам!",
+                    "link": "Научете повече",
+                    "href": "https://bg.wikipedia.org/wiki/HTTP-%D0%B1%D0%B8%D1%81%D0%BA%D0%B2%D0%B8%D1%82%D0%BA%D0%B0"
+                }
+            })
+        });
+    </script>
+    @*cookieconsent*@
 </head>
 <body class="content">
     <nav class="navbar navbar-inverse">
@@ -56,6 +83,8 @@
             </div>
         </div>
     </nav>
+
+
     <div class="admin-body">
         @if (ViewContext.RouteData.Values["Controller"].ToString() == "ClassClient")
         {
@@ -113,7 +142,7 @@
 
         }
         <footer>
-            <p class="center-block text-center" style="font-size:smaller">&copy; 2018 - НСИ Класификации</p>
+            <p class="center-block text-center" style="font-size:smaller"><img src="~/png/logo.png" alt="Classification logo" height="23" width="39" ondblclick="alert('Програмист: Ангел Вуков')"> &copy; 2018 - НСИ Класификации</p>
         </footer>
 
     </div>
@@ -133,20 +162,20 @@
         <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 
         @*<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-        <script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-2.2.0.min.js"
-                asp-fallback-src="~/lib/jquery/dist/jquery.min.js"
-                asp-fallback-test="window.jQuery"
-                crossorigin="anonymous"
-                integrity="sha384-K+ctZQ+LL8q6tP7I94W+qzQsfRV2a+AfHIi9k8z8l9ggpc8X+Ytst4yBo/hH+8Fk">
-        </script>
-        <script src="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.7/bootstrap.min.js"
-                asp-fallback-src="~/lib/bootstrap/dist/js/bootstrap.min.js"
-                asp-fallback-test="window.jQuery && window.jQuery.fn && window.jQuery.fn.modal"
-                crossorigin="anonymous"
-                integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa">
-        </script>
-        <script src="~/js/bootbox.min.js"></script>
-        <script src="~/js/site.min.js" asp-append-version="true"></script>*@
+            <script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-2.2.0.min.js"
+                    asp-fallback-src="~/lib/jquery/dist/jquery.min.js"
+                    asp-fallback-test="window.jQuery"
+                    crossorigin="anonymous"
+                    integrity="sha384-K+ctZQ+LL8q6tP7I94W+qzQsfRV2a+AfHIi9k8z8l9ggpc8X+Ytst4yBo/hH+8Fk">
+            </script>
+            <script src="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.7/bootstrap.min.js"
+                    asp-fallback-src="~/lib/bootstrap/dist/js/bootstrap.min.js"
+                    asp-fallback-test="window.jQuery && window.jQuery.fn && window.jQuery.fn.modal"
+                    crossorigin="anonymous"
+                    integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa">
+            </script>
+            <script src="~/js/bootbox.min.js"></script>
+            <script src="~/js/site.min.js" asp-append-version="true"></script>*@
     </environment>
     <script>
         $(document).on('click', '#login-dp', function (e) {
