--- a/Nsiclass.Client/Views/Account/Login.cshtml
+++ b/Nsiclass.Client/Views/Account/Login.cshtml
@@ -6,15 +6,15 @@
 @inject SignInManager<User> SignInManager
 
 @{
-    ViewData["Title"] = "Log in";
+    ViewData["Title"] = "Вход";
 }
 
-<h2>@ViewData["Title"]</h2>
+<h2 style="color:white;">Вход</h2>
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-4" style="color:white;">
         <section>
             <form asp-route-returnurl="@ViewData["ReturnUrl"]" method="post">
-                <h4>Use a local account to log in.</h4>
+                <h5>Използвайте акаунт от приложението, за да влезете</h5>
                 <hr />
                 <div asp-validation-summary="All" class="text-danger"></div>
                 <div class="form-group">
@@ -36,7 +36,7 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <button type="submit" class="btn btn-success">Log in</button>
+                    <button type="submit" class="btn btn-primary">Вписване</button>
                 </div>
             </form>
         </section>
