--- a/Nsiclass.Client/Views/Shared/_myLoginPartial.cshtml
+++ b/Nsiclass.Client/Views/Shared/_myLoginPartial.cshtml
@@ -12,7 +12,7 @@
             <li>
                 <a asp-area="" asp-controller="Manage" asp-action="Index" title="Manage">@UserManager.GetUserName(User)!</a>
             </li>
-            <li >
+            <li>
                 <button type="submit" class="btn btn-link navbar-btn navbar-link" style="font-size: 16px;">Изход</button>
             </li>
         </ul>
@@ -31,11 +31,11 @@ else
                             <form class="form" role="form" method="post" asp-area="" asp-controller="Account" asp-action="Login" accept-charset="UTF-8" id="login-nav">
                                 <div class="form-group">
                                     <label class="sr-only" for="exampleInputEmail2">Потребителско име</label>
-                                    <input name="UserName" class="form-control" id="exampleInputEmail2" placeholder="username" required>
+                                    <input name="UserName" class="form-control" id="exampleInputEmail2" placeholder="потребителско име" required>
                                 </div>
                                 <div class="form-group">
                                     <label class="sr-only" for="exampleInputPassword2">Парола</label>
-                                    <input name="Password" type="password" class="form-control" id="exampleInputPassword2" placeholder="password" required>
+                                    <input name="Password" type="password" class="form-control" id="exampleInputPassword2" placeholder="парола" required>
                                 </div>
                                 <div class="checkbox">
                                     <label>
