--- a/Nsiclass.Client/Views/ClassClient/ClassList.cshtml
+++ b/Nsiclass.Client/Views/ClassClient/ClassList.cshtml
@@ -49,7 +49,7 @@
                     @foreach (var foo in Items)
                     {
                         //var classVersionId = foo.Classif + "#$" + foo.Version;
-                        var title = foo.Classif + " " + foo.Version;
+                        var title = foo.Version;
 
                     <li style="margin-top:18px;">
                         @if (!foo.isDeleted)
